testing file upload

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,15 @@
 
     <ui-view></ui-view>
 
+    <form ref='uploadForm'
+            id='uploadForm'
+            action='http://localhost:3000/upload'
+            method='post'
+            encType="multipart/form-data">
+                <input type="file" name="submission" />
+                <input type='submit' value='Upload!' />
+        </form>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.js"></script>
